fix homepage mobile

--- a/bumba/index.html
+++ b/bumba/index.html
@@ -108,7 +108,7 @@
                 <div class="image-mask"></div>
             </div>
             <div class="banner-text">
-                <div class="container banner-text-container">
+                <div class="container banner-text-container text-sm">
                     <h1>BRING YOUR <br> VISION TO LIFE.</h1>
                     <p>Our team of disruptive and creative individuals will come  up with the best solutions for your brand. 
                         <strong>Working with us will prove to be useful as it will help attract new prospects</strong>
@@ -123,7 +123,7 @@
         <section class="projects">
             <img class="reveal-fixed" src="css/img/Mask group.png" alt="Bumba Partterns" width="100%">
             <div class="projects-container container">
-                <div class="left">
+                <div class="left text-sm">
                     <h2>OUR <br> PROJECTS</h2>
                     <p>Lorem ipsum dolor sit amet consectetur. Augue lacus faucibus dolor nulla at a. Pellentesque sapien porta sed aliquam erat quis ullamcorper. Adipiscing hendrerit ultrices pharetra sed nibh gravida. Platea sapien malesuada vitae viverra quis ultrices neque dignissim.
                         Morbi odio pharetra pellentesque risus sed. Imperdiet et venenatis dolor pharetra non. Vel tellus id amet eget convallis vestibulum imperdiet.</p>
@@ -140,7 +140,7 @@
                 <div class="left">
                     <img src="css/img/Rectangle 13.png" alt="Smoke ice scream">
                 </div>
-                <div class="right">
+                <div class="right text-sm">
                     <h2>About Us</h2>
                     <p>Lorem ipsum dolor sit amet consectetur. Augue lacus faucibus dolor nulla at a. Pellentesque sapien porta sed aliquam erat quis ullamcorper. Adipiscing hendrerit ultrices pharetra sed nibh gravida. Platea sapien malesuada vitae viverra quis ultrices neque dignissim.
                         Morbi odio pharetra pellentesque risus sed. Imperdiet et venenatis dolor pharetra non. Vel tellus id amet eget convallis vestibulum imperdiet.</p>
@@ -151,8 +151,8 @@
         </section>    
         <section class="team">
             <div class="team-container container">
-                <div class="team-head">
-                    <h1>Our Team</h1>
+                <div class="team-head ">
+                    <h1 >Our Team</h1>
                 </div>
                 <div class="team-members">
                     <div class="member">
