--- a/bumba/index.html
+++ b/bumba/index.html
@@ -70,7 +70,7 @@
                     </div>
                 </div>
             </div>
-            <nav>
+            <nav id="header-top">
                 <div class="left">
                     <a href="index.html" class="logo">
                         <svg width="244" height="78" viewBox="0 0 244 78" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -348,6 +348,9 @@
             <p>Copyright © 2023 Bumba Africa, All Rights Reserved</p>
         </div>
     </footer>
+    <!-- == To TOP == -->
+    <a class="to-top reveal" onclick="topFunction()" href="#header-top"><i class="fas fa-solid fa-chevron-up"></i></a>
+    <!-- == To TOP == -->
 
     <script src="js/script.js"></script>
 </body>
