--- a/bumba/blog_content.html
+++ b/bumba/blog_content.html
@@ -361,6 +361,19 @@
     </footer>
 
     <script>
+        const header = document.querySelector("nav");
+        const toTop = document.querySelector(".to-top");
+        window.onscroll = ()=>{
+            this.scrollY > 100 ? header.classList.add("sticky") : header.classList.remove("sticky");
+            this.scrollY > 200 ? toTop.classList.add("show") : toTop.classList.remove("show");
+        }
+        /* == BACK TO TOP == */
+        // When the user clicks on the button, scroll to the top of the document
+        function topFunction() {
+            document.body.scrollTop = 0;
+            document.documentElement.scrollTop = 0;
+        }
+        /* == BACK TO TOP == */
         /* === Overlay === */
             function openContact() {
                 document.getElementById("MenuOverlay").style.width = "100%";
