--- a/bumba/blog.html
+++ b/bumba/blog.html
@@ -144,7 +144,7 @@
                 <img src="css/img/Vector (Stroke).png" alt="Stars" class="stars" width="200px">
                 <div class="blogs">
                     <div class="blogs-content">
-                        <a href="blog_content.html" style="text-decoration: none; display: block;">
+                        <a href="blog_content.html" style="text-decoration: none;" class="blog-link">
                             <div class="blog blog-one">
                                 <img src="css/img/blogone.png" alt="Blog Thumbnail"
                                     style="pointer-events: none; cursor: pointer;">
@@ -157,7 +157,7 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="blog_content.html" style="text-decoration: none; display: block;">
+                        <a href="blog_content.html" style="text-decoration: none;" class="blog-link">
                             <div class="blog blog-two">
                                 <img src="css/img/blogtwo.png" alt="Blog Thumbnail"
                                     style="pointer-events: none; cursor: pointer;">
@@ -174,7 +174,7 @@
                 </div>
                 <div class="blogs">
                     <div class="blogs-content">
-                        <a href="blog_content.html" style="text-decoration: none; display: block;">
+                        <a href="blog_content.html" style="text-decoration: none;" class="blog-link">
                             <div class="blog blog-two">
                                 <img src="css/img/blogtwo.png" alt="Blog Thumbnail"
                                     style="pointer-events: none; cursor: pointer;">
@@ -187,7 +187,7 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="blog_content.html" style="text-decoration: none; display: block;">
+                        <a href="blog_content.html" style="text-decoration: none;" class="blog-link">
                             <div class="blog blog-one">
                                 <img src="css/img/blogone.png" alt="Blog Thumbnail"
                                     style="pointer-events: none; cursor: pointer;">
