--- a/bumba/blog_content.html
+++ b/bumba/blog_content.html
@@ -398,7 +398,7 @@
                     function showSlides(n) {
                     var i;
                     var slides = document.getElementsByClassName("stories");
-                    var dots = document.getElementsByClassName("story");
+                    var dots = document.getElementsByClassName("number");
                     if (n > slides.length) {slideIndex = 1}    
                     if (n < 1) {slideIndex = slides.length}
                     for (i = 0; i < slides.length; i++) {
