--- a/bumba/portfolio.html
+++ b/bumba/portfolio.html
@@ -190,7 +190,7 @@
                         </div>
                     </div>
                     <div class="row-text" id="tttext">
-                        <p>Skin Senstation</p>
+                        <p>Skin Sensation</p>
                     </div>
                 </div>
                 <div class="row twafane">
