--- a/bumba/blog.html
+++ b/bumba/blog.html
@@ -152,7 +152,7 @@
                                     <div class="headline">
                                         <p>INSIGHT</p>
                                     </div>
-                                    <a href="blog_content.html">Lorem ipsum dolor sit amet</a>
+                                    <a href="blog_content.html">Who is Tandiwe Sha?</a>
                                     <p>December 1, 2022</p>
                                 </div>
                             </div>
@@ -182,7 +182,7 @@
                                     <div class="headline">
                                         <p>INSIGHT</p>
                                     </div>
-                                    <a href="blog_content.html">Lorem ipsum dolor sit amet</a>
+                                    <a href="blog_content.html">Who is Tandiwe Sha?</a>
                                     <p>December 1, 2022</p>
                                 </div>
                             </div>
@@ -195,7 +195,7 @@
                                     <div class="headline">
                                         <p>INSIGHT</p>
                                     </div>
-                                    <a href="blog_content.html">Lorem ipsum dolor sit amet</a>
+                                    <a href="blog_content.html">Who is Karen Mosepe?</a>
                                     <p>December 1, 2022</p>
                                 </div>
                             </div>
