--- a/bumba/aboutus.html
+++ b/bumba/aboutus.html
@@ -119,10 +119,10 @@
                     <h1>BRANDING <br> BUSINESS <br> <strong>NOT</strong> AS <br> USUAL</h1>
                 </div>
                 <div class="right">
-                    <p>Lorem ipsum dolor sit amet consectetur. Augue lacus faucibus dolor nulla at a. Pellentesque sapien porta sed aliquam erat quis ullamcorper. Adipiscing hendrerit ultrices pharetra sed nibh gravida. Platea sapien malesuada vitae viverra quis ultrices neque dignissim</p>
-                    <p>Morbi odio pharetra pellentesque risus sed. Imperdiet et venenatis dolor pharetra non. Vel tellus id amet eget convallis vestibulum imperdiet.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur. Posuere quam duis sit augue eget. Lacus felis quam felis nisl a. Pellentesque quis a scelerisque elit imperdiet egestas fames. Cras volutpat sed faucibus risus netus gravida felis pharetra mollis. In gravida nibh interdum nisl platea tortor enim quis. Sed donec sed a velit nulla sed molestie vitae sagittis. Mi velit eget viverra suscipit. Enim est lectus proin porta a non. Id neque in morbi posuere dictum at nulla at.
-                        Sit non in quis pellentesque praesent aliquet ultricies. Facilisis consectetur sit id sit. Bibendum elit venenatis fermentum potenti tortor quam tincidunt id pharetra. Dictumst ut sed sed non sit. Pretium turpis in elementum bibendum consectetur. Massa aliquet ac adipiscing lectus. Mus semper adipiscing sed risus. Facilisi lorem a donec mattis amet lectus euismod.</p>
+                    <p>We believe that communication is key to any successful project, which is why we keep you informed every step of the way. We are always available to answer your questions and provide support whenever you need it.</p>
+                    <p>Thank you for considering us for your next project. We look forward to working with you and helping you achieve your goals.</p>
+                    <p>We take pride in our work and strive to maintain a reputation for excellence in everything we do. From the moment you contact us, we will work closely with you to understand your requirements and develop a tailored solution that fits your budget and timeline.
+                       Whether you need a new website, custom software development, or consulting services, we have the expertise and experience to deliver results that drive your business forward. Our team is made up of skilled designers, developers, and consultants who are committed to your success.</p>
                 </div>
             </div>
             <img src="css/img/Mask group.png" alt="Bumba Partterns" width="100%" style="margin: 40px 0px 0px;">
@@ -136,27 +136,27 @@
                     <div class="member">
                         <img src="css/img/person one.png" alt="">
                         <div class="member-info">
-                            <h4>Lorem Ipsum</h4>
+                            <h4>Tandiwe Muny</h4>
                             <p>Executive Creative Director</p>
-                            <p>Lorem ipsum dolor sit amet consectetur. Faucibus congue et leo gravida nullam ac at imperdiet. Viverra consequat auctor viverra aenean tempor pharetra ultrices. Ornare et nunc lectus quis vulputate donec nunc in elementum. Adipiscing et aenean ultricies.</p>
+                            <p>Tandiwe Muny is a hardworking and dedicated individual who takes pride in delivering high-quality results. He is a skilled project manager with a track record of completing complex projects on time and within budget.</p>
                             <a href="#" target="_blank">Linked in</a>
                         </div>
                     </div>
                     <div class="member">
                         <img src="css/img/person two.png" alt="">
                         <div class="member-info">
-                            <h4>Lorem Ipsum</h4>
+                            <h4>Sarah Nyamu</h4>
                             <p>Executive Creative Director</p>
-                            <p>Lorem ipsum dolor sit amet consectetur. Faucibus congue et leo gravida nullam ac at imperdiet. Viverra consequat auctor viverra aenean tempor pharetra ultrices. Ornare et nunc lectus quis vulputate donec nunc in elementum. Adipiscing et aenean ultricies.</p>
+                            <p>Sarah is a detail-oriented perfectionist who never settles for anything less than excellence. She is a talented graphic designer with a keen eye for aesthetics and a passion for creating visually stunning designs.</p>
                             <a href="#" target="_blank">Linked in</a>
                         </div>
                     </div>
                     <div class="member">
                         <img src="css/img/person three.png" alt="">
                         <div class="member-info">
-                            <h4>Lorem Ipsum</h4>
+                            <h4>Tombi Mbuka</h4>
                             <p>Executive Creative Director</p>
-                            <p>Lorem ipsum dolor sit amet consectetur. Faucibus congue et leo gravida nullam ac at imperdiet. Viverra consequat auctor viverra aenean tempor pharetra ultrices. Ornare et nunc lectus quis vulputate donec nunc in elementum. Adipiscing et aenean ultricies.</p>
+                            <p>Tom is a results-driven sales professional with a proven track record of exceeding targets. He is a strategic thinker who is always looking for new and innovative ways to grow the business and drive revenue.</p>
                             <a href="#" target="_blank">Linked in</a>
                         </div>
                     </div>
@@ -172,27 +172,27 @@
                     <div class="member">
                         <img src="css/img/person four.png" alt="">
                         <div class="member-info">
-                            <h4>Lorem Ipsum</h4>
+                            <h4>Emily Chero</h4>
                             <p>Executive Creative Director</p>
-                            <p>Lorem ipsum dolor sit amet consectetur. Faucibus congue et leo gravida nullam ac at imperdiet. Viverra consequat auctor viverra aenean tempor pharetra ultrices. Ornare et nunc lectus quis vulputate donec nunc in elementum. Adipiscing et aenean ultricies.</p>
+                            <p>Emily is a creative and innovative marketer with a passion for storytelling. She has a talent for crafting compelling narratives that engage audiences and drive brand awareness.</p>
                             <a href="#" target="_blank">Linked in</a>
                         </div>
                     </div>
                     <div class="member">
                         <img src="css/img/person five.png" alt="">
                         <div class="member-info">
-                            <h4>Lorem Ipsum</h4>
+                            <h4>James Moniki</h4>
                             <p>Executive Creative Director</p>
-                            <p>Lorem ipsum dolor sit amet consectetur. Faucibus congue et leo gravida nullam ac at imperdiet. Viverra consequat auctor viverra aenean tempor pharetra ultrices. Ornare et nunc lectus quis vulputate donec nunc in elementum. Adipiscing et aenean ultricies.</p>
+                            <p>James is a reliable and dependable developer who takes pride in his work. He is a skilled programmer with a strong attention to detail and a knack for finding elegant solutions to complex problems.</p>
                             <a href="#" target="_blank">Linked in</a>
                         </div>
                     </div>
                     <div class="member">
                         <img src="css/img/person six.png" alt="">
                         <div class="member-info">
-                            <h4>Lorem Ipsum</h4>
+                            <h4>Alex Kapotwe</h4>
                             <p>Executive Creative Director</p>
-                            <p>Lorem ipsum dolor sit amet consectetur. Faucibus congue et leo gravida nullam ac at imperdiet. Viverra consequat auctor viverra aenean tempor pharetra ultrices. Ornare et nunc lectus quis vulputate donec nunc in elementum. Adipiscing et aenean ultricies.</p>
+                            <p>Alex is a proactive and dynamic designer who is always pushing the boundaries of what's possible. He is a visionary thinker with a passion for exploring new ideas and creating innovative designs that captivate audiences</p>
                             <a href="#" target="_blank">Linked in</a>
                         </div>
                     </div>
@@ -208,18 +208,18 @@
                     <div class="member">
                         <img src="css/img/person seven.png" alt="">
                         <div class="member-info">
-                            <h4>Lorem Ipsum</h4>
+                            <h4>Racheli Tandiwa</h4>
                             <p>Executive Creative Director</p>
-                            <p>Lorem ipsum dolor sit amet consectetur. Faucibus congue et leo gravida nullam ac at imperdiet. Viverra consequat auctor viverra aenean tempor pharetra ultrices. Ornare et nunc lectus quis vulputate donec nunc in elementum. Adipiscing et aenean ultricies.</p>
+                            <p>Rachel is a detail-oriented researcher with a passion for data and analytics. She has a talent for turning complex information into actionable insights and is skilled at communicating her findings in a clear and concise manner.</p>
                             <a href="#" target="_blank">Linked in</a>
                         </div>
                     </div>
                     <div class="member">
                         <img src="css/img/person eight.png" alt="">
                         <div class="member-info">
-                            <h4>Lorem Ipsum</h4>
+                            <h4>Sophia Buka</h4>
                             <p>Executive Creative Director</p>
-                            <p>Lorem ipsum dolor sit amet consectetur. Faucibus congue et leo gravida nullam ac at imperdiet. Viverra consequat auctor viverra aenean tempor pharetra ultrices. Ornare et nunc lectus quis vulputate donec nunc in elementum. Adipiscing et aenean ultricies.</p>
+                            <p>Sophia is a collaborative and team-oriented project manager who excels at bringing people together to achieve common goals. She is a natural leader who is skilled at motivating and inspiring her team to deliver their best work.</p>
                             <a href="#" target="_blank">Linked in</a>
                         </div>
                     </div>
