--- a/bumba/index.html
+++ b/bumba/index.html
@@ -125,8 +125,7 @@
             <div class="projects-container container">
                 <div class="left text-sm">
                     <h2>OUR <br> PROJECTS</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur. Augue lacus faucibus dolor nulla at a. Pellentesque sapien porta sed aliquam erat quis ullamcorper. Adipiscing hendrerit ultrices pharetra sed nibh gravida. Platea sapien malesuada vitae viverra quis ultrices neque dignissim.
-                        Morbi odio pharetra pellentesque risus sed. Imperdiet et venenatis dolor pharetra non. Vel tellus id amet eget convallis vestibulum imperdiet.</p>
+                    <p>Welcome to our website! We are a team of passionate professionals dedicated to providing high-quality services and products to our clients. Our goal is to exceed your expectations by delivering exceptional results that meet your unique needs. We take pride in our work and strive to maintain a reputation for excellence in everything we do.</p>
                     <button onclick="location.href='services.html'">See More</button>
                 </div>
                 <div class="right">
@@ -142,8 +141,7 @@
                 </div>
                 <div class="right text-sm">
                     <h2>About Us</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur. Augue lacus faucibus dolor nulla at a. Pellentesque sapien porta sed aliquam erat quis ullamcorper. Adipiscing hendrerit ultrices pharetra sed nibh gravida. Platea sapien malesuada vitae viverra quis ultrices neque dignissim.
-                        Morbi odio pharetra pellentesque risus sed. Imperdiet et venenatis dolor pharetra non. Vel tellus id amet eget convallis vestibulum imperdiet.</p>
+                    <p>Whether you need a new website, custom software development, or consulting services, we have the expertise and experience to deliver results that drive your business forward. Our team is made up of skilled designers, developers, and consultants who are committed to your success.</p>
                     <button onclick="location.href='aboutus.html'">Read More</button>
                 </div>
             </div>
@@ -158,21 +156,21 @@
                     <div class="member">
                         <img src="css/img/Member One.png" alt="">
                         <div class="member-info">
-                            <h4>Lorem Ipsum</h4>
+                            <h4>Susan Jere</h4>
                             <p>Executive Creative Director</p>
                         </div>
                     </div>
                     <div class="member">
                         <img src="css/img/Member Two.png" alt="">
                         <div class="member-info">
-                            <h4>Lorem Ipsum</h4>
+                            <h4>Bupe Mwansa</h4>
                             <p>Head of Strategy & Operations</p>
                         </div>
                     </div>
                     <div class="member">
                         <img src="css/img/Member Three.png" alt="">
                         <div class="member-info">
-                            <h4>Lorem Ipsum</h4>
+                            <h4>Julian Thandiwe</h4>
                             <p>Senior Client Success Director</p>
                         </div>
                     </div>
