--- a/bumba/blog.html
+++ b/bumba/blog.html
@@ -152,7 +152,7 @@
                                     <div class="headline">
                                         <p>INSIGHT</p>
                                     </div>
-                                    <a href="blog_content.html">Who is Tandiwe Sha?</a>
+                                    <a href="blog_content.html">Benefits of a Good Night's Sleep</a>
                                     <p>December 1, 2022</p>
                                 </div>
                             </div>
