--- a/bumba/aboutus.html
+++ b/bumba/aboutus.html
@@ -119,10 +119,22 @@
                     <h1>BRANDING <br> BUSINESS <br> <strong>NOT</strong> AS <br> USUAL</h1>
                 </div>
                 <div class="right">
-                    <p>We believe that communication is key to any successful project, which is why we keep you informed every step of the way. We are always available to answer your questions and provide support whenever you need it.</p>
-                    <p>Thank you for considering us for your next project. We look forward to working with you and helping you achieve your goals.</p>
-                    <p>We take pride in our work and strive to maintain a reputation for excellence in everything we do. From the moment you contact us, we will work closely with you to understand your requirements and develop a tailored solution that fits your budget and timeline.
-                       Whether you need a new website, custom software development, or consulting services, we have the expertise and experience to deliver results that drive your business forward. Our team is made up of skilled designers, developers, and consultants who are committed to your success.</p>
+                    <p>Welcome to Bumba Africa, a dynamic media agency based in Zambia and Kenya that's driven by a young and innovative team of Art and Product Experts. We're not your typical media agency – we're a team of creative, passionate, and tech-savvy individuals who are driven to make a difference in the media industry.</p>
+                    <p>Our mission is to help businesses and organizations of all sizes achieve their goals through innovative and cutting-edge media solutions. Whether it's advertising, branding, digital marketing, video production, event coverage, or something else, we're up for the challenge. Our team of young and talented media professionals is always on the lookout for new and creative ways to help our clients stand out in a crowded marketplace.</p>
+                    <p>At Bumba Africa, we're not afraid to think outside the box. We're constantly exploring new technologies and innovative approaches to media that allow us to create unique and impactful campaigns for our clients. We're passionate about what we do, and we're committed to delivering the highest level of service and support to each and every one of our clients.</p>
+                    <p>We're proud to be a young and talented, youth inclined media agency with a touch of seasoned and experienced leadership, and we believe that our fresh perspective and innovative ideas set us apart from the competition. We're always looking for ways to push the boundaries of what's possible in the digital media space, and we're excited to help our clients do the same.</p>
+                    <p>Thank you for considering Bumba Africa for your 360 Degrees media needs. We're confident that our team of young and innovative professionals has what it takes to help you achieve your goals and make an impact in the media industry.</p>
+                </div>
+            </div>
+            <div class="branding-container container">
+                <div class="left">
+                    <h1>CORE <br> BUSINESS <br> <strong>VALUES</strong></h1>
+                </div>
+                <div class="right">
+                    <p><strong>1. Creative:</strong> A focus on creativity runs through everything Bumba Africa does, from brainstorming and ideation to design and execution.</p>  
+                    <p><strong>2. Innovative:</strong> We constantly push the boundaries and look for new and innovative ways to solve problems and create impactful campaigns.</p>
+                    <p><strong>3. Collaborative:</strong> Great ideas often come from collaboration and the sharing of different perspectives. The power of collaboration helps us to generate truly unique and effective campaigns.</p>
+                    <p><strong>4. Authentic:</strong> In today's world, consumers value authenticity above all else. We value authenticity and strive to create genuine, meaningful connections with audiences.</p>                  
                 </div>
             </div>
             <img src="css/img/Mask group.png" alt="Bumba Partterns" width="100%" style="margin: 40px 0px 0px;">
