--- a/bumba/aboutus.html
+++ b/bumba/aboutus.html
@@ -134,27 +134,27 @@
                 </div>
                 <div class="team-members">
                     <div class="member">
-                        <img src="css/img/person one.png" alt="">
+                        <img src="css/img/Bendon.png" alt="">
                         <div class="member-info">
-                            <h4>Lorem Ipsum</h4>
+                            <h4>Bendon Murgor</h4>
                             <p>Executive Creative Director</p>
                             <p>Lorem ipsum dolor sit amet consectetur. Faucibus congue et leo gravida nullam ac at imperdiet. Viverra consequat auctor viverra aenean tempor pharetra ultrices. Ornare et nunc lectus quis vulputate donec nunc in elementum. Adipiscing et aenean ultricies.</p>
                             <a href="#" target="_blank">Linked in</a>
                         </div>
                     </div>
                     <div class="member">
-                        <img src="css/img/person two.png" alt="">
+                        <img src="css/img/robin.png" alt="">
                         <div class="member-info">
-                            <h4>Lorem Ipsum</h4>
+                            <h4>Robin</h4>
                             <p>Executive Creative Director</p>
                             <p>Lorem ipsum dolor sit amet consectetur. Faucibus congue et leo gravida nullam ac at imperdiet. Viverra consequat auctor viverra aenean tempor pharetra ultrices. Ornare et nunc lectus quis vulputate donec nunc in elementum. Adipiscing et aenean ultricies.</p>
                             <a href="#" target="_blank">Linked in</a>
                         </div>
                     </div>
                     <div class="member">
-                        <img src="css/img/person three.png" alt="">
+                        <img src="css/img/Lisa.jpg" alt="">
                         <div class="member-info">
-                            <h4>Lorem Ipsum</h4>
+                            <h4>Lisa Mwende</h4>
                             <p>Executive Creative Director</p>
                             <p>Lorem ipsum dolor sit amet consectetur. Faucibus congue et leo gravida nullam ac at imperdiet. Viverra consequat auctor viverra aenean tempor pharetra ultrices. Ornare et nunc lectus quis vulputate donec nunc in elementum. Adipiscing et aenean ultricies.</p>
                             <a href="#" target="_blank">Linked in</a>
