--- a/bumba/index.html
+++ b/bumba/index.html
@@ -156,24 +156,24 @@
                 </div>
                 <div class="team-members">
                     <div class="member">
-                        <img src="css/img/Member One.png" alt="">
+                        <img src="css/img/Bendon.png" alt="">
                         <div class="member-info">
-                            <h4>Lorem Ipsum</h4>
+                            <h4>Bendon Murgor</h4>
                             <p>Executive Creative Director</p>
                         </div>
                     </div>
                     <div class="member">
-                        <img src="css/img/Member Two.png" alt="">
+                        <img src="css/img/robin.png" alt="">
                         <div class="member-info">
-                            <h4>Lorem Ipsum</h4>
+                            <h4>Robin</h4>
                             <p>Head of Strategy & Operations</p>
                         </div>
                     </div>
                     <div class="member">
-                        <img src="css/img/Member Three.png" alt="">
+                        <img src="css/img/Lisa.jpg" alt="">
                         <div class="member-info">
-                            <h4>Lorem Ipsum</h4>
-                            <p>Senior Client Success Director</p>
+                            <h4>Lisa Mwende</h4>
+                            <p>HR Manager</p>
                         </div>
                     </div>
                 </div>
