--- a/bumba/aboutus.html
+++ b/bumba/aboutus.html
@@ -149,7 +149,7 @@
                         <img src="css/img/Bendon.png" alt="">
                         <div class="member-info">
                             <h4>Bendon Murgor</h4>
-                            <p>Executive Creative Director</p>
+                            <p>Head of sales and marketing</p>
                             <p>Tandiwe Muny is a hardworking and dedicated individual who takes pride in delivering high-quality results. He is a skilled project manager with a track record of completing complex projects on time and within budget.</p>
                             <a href="#" target="_blank">Linked in</a>
                         </div>
@@ -157,8 +157,8 @@
                     <div class="member">
                         <img src="css/img/robin.png" alt="">
                         <div class="member-info">
-                            <h4>Robin</h4>
-                            <p>Executive Creative Director</p>
+                            <h4>Robin Gakuu</h4>
+                            <p>Creative Director</p>
                             <p>Sarah is a detail-oriented perfectionist who never settles for anything less than excellence. She is a talented graphic designer with a keen eye for aesthetics and a passion for creating visually stunning designs.</p>
                             <a href="#" target="_blank">Linked in</a>
                         </div>
