--- a/bumba/index.html
+++ b/bumba/index.html
@@ -157,14 +157,14 @@
                         <img src="css/img/Bendon.png" alt="">
                         <div class="member-info">
                             <h4>Bendon Murgor</h4>
-                            <p>Executive Creative Director</p>
+                            <p> Head of sales and marketing</p>
                         </div>
                     </div>
                     <div class="member">
                         <img src="css/img/robin.png" alt="">
                         <div class="member-info">
-                            <h4>Robin</h4>
-                            <p>Head of Strategy & Operations</p>
+                            <h4>Robin Gakuu</h4>
+                            <p>Creative Director</p>
                         </div>
                     </div>
                     <div class="member">
