update:team images

--- a/bumba/aboutus.html
+++ b/bumba/aboutus.html
@@ -150,7 +150,7 @@
                         <div class="member-info">
                             <h4>Bendon Murgor</h4>
                             <p>Head of sales and marketing</p>
-                            <p>Tandiwe Muny is a hardworking and dedicated individual who takes pride in delivering high-quality results. He is a skilled project manager with a track record of completing complex projects on time and within budget.</p>
+                            <p>Bendon is a hardworking and dedicated individual who takes pride in delivering high-quality results. He is a skilled project manager with a track record of completing complex projects on time and within budget.</p>
                             <a href="#" target="_blank">Linked in</a>
                         </div>
                     </div>
@@ -159,7 +159,7 @@
                         <div class="member-info">
                             <h4>Robin Gakuu</h4>
                             <p>Creative Director</p>
-                            <p>Sarah is a detail-oriented perfectionist who never settles for anything less than excellence. She is a talented graphic designer with a keen eye for aesthetics and a passion for creating visually stunning designs.</p>
+                            <p>Robin is a detail-oriented perfectionist who never settles for anything less than excellence. She is a talented graphic designer with a keen eye for aesthetics and a passion for creating visually stunning designs.</p>
                             <a href="#" target="_blank">Linked in</a>
                         </div>
                     </div>
@@ -168,7 +168,7 @@
                         <div class="member-info">
                             <h4>Lisa Mwende</h4>
                             <p>Executive Creative Director</p>
-                            <p>Tom is a results-driven sales professional with a proven track record of exceeding targets. He is a strategic thinker who is always looking for new and innovative ways to grow the business and drive revenue.</p>
+                            <p>Lisa is a results-driven sales professional with a proven track record of exceeding targets. He is a strategic thinker who is always looking for new and innovative ways to grow the business and drive revenue.</p>
                             <a href="#" target="_blank">Linked in</a>
                         </div>
                     </div>
@@ -191,20 +191,20 @@
                         </div>
                     </div>
                     <div class="member">
-                        <img src="css/img/person five.png" alt="">
+                        <img src="css/img/warren.png" alt="">
                         <div class="member-info">
-                            <h4>James Moniki</h4>
-                            <p>Executive Creative Director</p>
-                            <p>James is a reliable and dependable developer who takes pride in his work. He is a skilled programmer with a strong attention to detail and a knack for finding elegant solutions to complex problems.</p>
+                            <h4>Ochieng Warren</h4>
+                            <p>Software Developer</p>
+                            <p>warren is a reliable and dependable developer who takes pride in his work. He is a skilled programmer with a strong attention to detail and a knack for finding elegant solutions to complex problems.</p>
                             <a href="#" target="_blank">Linked in</a>
                         </div>
                     </div>
                     <div class="member">
-                        <img src="css/img/person six.png" alt="">
+                        <img src="css/img/mercy.png" alt="">
                         <div class="member-info">
-                            <h4>Alex Kapotwe</h4>
-                            <p>Executive Creative Director</p>
-                            <p>Alex is a proactive and dynamic designer who is always pushing the boundaries of what's possible. He is a visionary thinker with a passion for exploring new ideas and creating innovative designs that captivate audiences</p>
+                            <h4>Mercy Cherono</h4>
+                            <p>Public relations officer</p>
+                            <p>Mercy is a proactive and dynamic designer who is always pushing the boundaries of what's possible. He is a visionary thinker with a passion for exploring new ideas and creating innovative designs that captivate audiences</p>
                             <a href="#" target="_blank">Linked in</a>
                         </div>
                     </div>
