--- a/bumba/index.html
+++ b/bumba/index.html
@@ -129,7 +129,7 @@
                     <button onclick="location.href='services.html'">See More</button>
                 </div>
                 <div class="right">
-                    <img src="css/img/Ice cream smoke.png" alt="Smoke ice scream">
+                    <img src="css/img/projects.jpg" alt="projects">
                 </div>
             </div>
             <img src="css/img/Bottom Pattern.png" alt="Bumba Partterns" width="100%" style="margin: 40px 0px 0px;">
