--- a/bumba/aboutus.html
+++ b/bumba/aboutus.html
@@ -182,9 +182,9 @@
                 </div>
                 <div class="team-members">
                     <div class="member">
-                        <img src="css/img/person four.png" alt="">
+                        <img src="css/img/rename.png" alt="">
                         <div class="member-info">
-                            <h4>Emily Chero</h4>
+                            <h4>Gerald Ndolo</h4>
                             <p>Executive Creative Director</p>
                             <p>Emily is a creative and innovative marketer with a passion for storytelling. She has a talent for crafting compelling narratives that engage audiences and drive brand awareness.</p>
                             <a href="#" target="_blank">Linked in</a>
@@ -211,7 +211,7 @@
                 </div>
             </div>
         </section>
-        <section class="team">
+        <!-- <section class="team">
             <div class="team-container container">
                 <div class="team-head">
                     <h1>CLIENT SERVICE OPERATIONS</h1>
@@ -240,7 +240,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
     </main>
     <footer>
         <div class="footer">
