--- a/bumba/aboutus.html
+++ b/bumba/aboutus.html
@@ -186,7 +186,7 @@
                         <div class="member-info">
                             <h4>Gerald Ndolo</h4>
                             <p>Executive Creative Director</p>
-                            <p>Emily is a creative and innovative marketer with a passion for storytelling. She has a talent for crafting compelling narratives that engage audiences and drive brand awareness.</p>
+                            <p>Gerald is a creative and innovative marketer with a passion for storytelling. She has a talent for crafting compelling narratives that engage audiences and drive brand awareness.</p>
                             <a href="#" target="_blank">Linked in</a>
                         </div>
                     </div>
