--- a/bumba/index.html
+++ b/bumba/index.html
@@ -176,7 +176,7 @@
                     </div>
                 </div>
                 <div class="meet">
-                    <button id="contact" onclick="location.href='services.html'">Meet Team</button>
+                    <button id="contact" onclick="location.href='aboutus.html'">Meet Team</button>
                 </div>
             </div>
         </section>
