link to contact us

--- a/bumba/index.html
+++ b/bumba/index.html
@@ -113,7 +113,7 @@
                     <p>Our team of disruptive and creative individuals will come  up with the best solutions for your brand. 
                         <strong>Working with us will prove to be useful as it will help attract new prospects</strong>
                     </p>
-                    <button>Get Started</button>
+                  <a href="#contact">  <button>Get Started</button></a>
                 </div>
             </div>
             <div class="rectangle" id="ban-rect">
